<resources>
    <string name="app_name">Film Geçidi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Kullanıcı Adı</string>
    <string name="prompt_name">İsim</string>
    <string name="prompt_email">Email</string>

    <string name="prompt_password">Şifre</string>
    <string name="action_sign_in">Giriş</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Kaydol</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="about"><a href="http://fatmaasik.hol.es" vlink="red" >DWP Project</a> sitesinin mobil uygulamasıdır. Sitedeki filmler
       <a href="http://www.sinemelar.com" vlink="red" >sinemalar.com</a>dan python scrapy(web crawler) ile alınmıştır.
        RESTful API yardımıyla filmler uygulamada da kullanılmıştır. </string>
    <string name="aboutName">Fatma Aşık</string>
    <string name="aboutMail">fatmaasik33@gmail.com</string>
      <string name="aboutUni">Bilgisayar Mühendisi</string>
    <string name="action_settings">Ayarlar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
